# backend/app/Http/Controllers/Api/ContactController.php
@@ -3,9 +3,11 @@
 namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
+use App\Http\Requests\StoreContactRequest;
 use App\Services\Contact\ContactService;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
+use Throwable;
 
 /**
  * @OA\Tag(
@@ -55,10 +57,59 @@ class ContactController extends Controller
      *     )
      * )
      */
+
+
     public function index(Request $request): JsonResponse
     {
         $perPage = (int) $request->get('per_page', 10);
         $contacts = $this->service->list($perPage);
         return response()->json($contacts);
+    }
+
+    /**
+     * @OA\Post(
+     *     path="/api/contacts",
+     *     summary="Create a new contact",
+     *     tags={"Contacts"},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             required={"nome","email","cep"},
+     *             @OA\Property(property="nome", type="string", example="Vitor Pedroso"),
+     *             @OA\Property(property="email", type="string", example="vitor@example.com"),
+     *             @OA\Property(property="telefone", type="string", example="11999999999"),
+     *             @OA\Property(property="cep", type="string", example="01001000"),
+     *             @OA\Property(property="estado", type="string", example="SP"),
+     *             @OA\Property(property="cidade", type="string", example="São Paulo"),
+     *             @OA\Property(property="bairro", type="string", example="Sé"),
+     *             @OA\Property(property="endereco", type="string", example="Praça da Sé"),
+     *             @OA\Property(property="numero", type="string", example="100")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Contact created successfully",
+     *     ),
+     *     @OA\Response(
+     *         response=422,
+     *         description="Validation error"
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Internal server error"
+     *     )
+     * )
+     */
+    public function store(StoreContactRequest $request): JsonResponse
+    {
+        try {
+            $contact = $this->service->create($request->validated());
+            return response()->json($contact, 201);
+        } catch (Throwable $e) {
+            return response()->json([
+                'error' => 'Erro ao criar contato.',
+                'details' => $e->getMessage(),
+            ], 500);
+        }
     }
 }
