# backend/routes/api.php
@@ -5,3 +5,4 @@ use Illuminate\Support\Facades\Route;
 
 // API de contatos
 Route::get('/contacts', [ContactController::class, 'index'])->name('contact.index');
+Route::post('/contacts', [ContactController::class, 'store'])->name('contact.store');
